fix(front) : responsive vertical spacing

--- a/packages/scss/src/components/indexTable/mods.scss
+++ b/packages/scss/src/components/indexTable/mods.scss
@@ -120,7 +120,6 @@
         .indexTable-body {
             display: flex;
             flex-direction: column;
-            gap: var(--components-indexTable-row-spacing-responsive);
         }
 
         .indexTable-body-row {
@@ -134,6 +133,11 @@
             grid-template-areas: var(--components-indexTable-row-responsive-grid-template-areas, none);
             align-items: center;
             padding: var(--components-indexTable-row-spacing-responsive) 0;
+            margin-bottom: var(--components-indexTable-row-spacing-responsive);
+            &:not(:has(.indexTable-body-row-cell)) {
+                padding: 0;
+                margin-bottom: 0;
+            }
         }
 
         .indexTable-body-row-cell {
@@ -174,10 +178,6 @@
                     --components-indexTable-row-responsive-grid-template-columns,
                     1fr
                 );
-            // Padding add too much vertical spacing on title rows
-            &:not(:has(.indexTable-body-row-cell)) {
-                padding: 0;
-            }
         }
         .indexTable-body-row-transparentCell {
             width: auto;
@@ -195,8 +195,11 @@
 
 @mixin stackableResponsiveCardList {
     @include media.max('S') {
-        .indexTable-body-row {
-            margin-bottom: var(--components-indexTable-row-stack-border-bottom);
+        .indexTable-body-row[class*='mod-stack'] {
+            margin-bottom: calc(
+                var(--components-indexTable-row-spacing-responsive) +
+                    var(--components-indexTable-row-stack-border-bottom)
+            );
         }
         .indexTable-body-row-cell {
             border-bottom: 0;
